# manokee

./: .git-blame-ignore-revs  .gitignore  .travis.yml  LICENSE  README.md  mypy.ini  pyproject.toml  setup.py
.circleci/: config.yml
manokee/: __init__.py  __main__.py  amio_timing.py  application.py  entrypoint.py  global_config.py  input_recorder.py  looping.py  mark.py  meter.py  metronome.py  midi_control.py  observable.py  ping.py  playspec_controller.py  playspec_generator.py  playspec_generators.py  playspec_source.py  revising.py  session.py  session_history.py  session_holder.py  time_formatting.py  timing_utils.py  track.py  track_group.py  track_loader.py  transport_state.py  wall_time_recorder.py  workspace.py
manokee/audacity/: project.py
manokee/timing/: audacity_timing.py  fixed_bpm_timing.py  interpolated_timing.py  timing.py
manokee/utils/: __init__.py  element_tree.py
manokee/web/: app.py
manokee/web/front/: package-lock.json  package.json  webpack.config.js
manokee/web/front/src/: App.js  AudioIoControl.js  Marks.js  Meter.js  PlaybackCaptureMeters.js  RecordedFragments.js  SessionManagement.js  Status.js  SummaryLine.js  Timing.js  TimingManagement.js  Tracks.js  TransportControl.js  app.js  audio-io-control.js  components.js  index.js  marks.js  meter-utils.js  meter.js  pan-knob.js  playback-capture-meters.js  recorded-fragments.js  session-management.js  status.js  summary-line.js  timing-management.js  track-group.js  tracks.js  transport-control.js
res/: metbar.flac  metbeat.flac
tests/: test_audacity_project.py  test_audacity_timing.py  test_input_recorder.py  test_mark.py  test_moving_average.py  test_session.py  test_time_formatting.py  test_wall_time_recorder.py
tests/assets/: simple.mnk
tests/assets/audacity-projects/: simple.aup
tests/assets/sessions/simple/: session.mnk
