[tool.poetry]
name = "manokee"
version = "0.4.0-dev"
description = "Audio recording software with a mobile-first web interface"
authors = ["Michał Szymański <smiszym@gmail.com>"]
license = "MIT"
homepage = "https://github.com/smiszym/manokee"
repository = "https://github.com/smiszym/manokee"
keywords = ["audio", "music", "linux"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording"
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.3"
amio = "0.1.1"
jsonpatch = "^1.32"
mido = "^1.2.10"
netifaces = "0.11.0"
psutil = "^5.9.4"
pygit2 = "^1.11.1"
python-rtmidi = "^1.4.9"
python-socketio = "^5.7.2"
qrcode = "^7.3.1"
SoundFile = "0.11.0"
toml = "0.10.2"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "^7.2.0"
black = "*"
coverage = "^6.5.0"
types-toml = "^0.10.8"

[tool.poetry.scripts]
manokee = 'manokee.entrypoint:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
